2003-07-11  Antonio Xu  <antonio.xu@sun.com>

	* folder-browser-ui.c: Change the EditPaste mask to IS_0MESSAGE so
	that it is always activatable. Fixes bug #46018.

2003-07-04  Maxx Cao  <maxx.cao@sun.com>

	** For bug #41839

	* mail-display.c (do_attachment_header): Attachment buttons made
	accessable with keyboard (focusable). "Inline" button is disabled
	when attachment can't be viewed inline.
	(do_signature): Signature button made accessable with keyboard
	(focusable).
	(button_press): Function changed to an event callback (originally
	gtkbutton signal callback).
	(popup_menu_placement_callback): Function added to place popup
	menu (of attachment) beside button when activated by keyboard.

2003-07-10  Yuedong Du  <yuedong.du@sun.com>

	* evolution-mail.schemas: add a gconf key corresponding to newly 
	introduced caret mode of gtkhtml widget.

	* folder-browser-ui.c: new verb handling, corresponding the new menu
	entry for the caret mode flag. 

	* folder-browser.h: declaration of new verb handler to the menu entry 
	that turn caret mode on/off. The function just set the new introduced
	gconf key.

	* folder-browser.c: ditto

	* mail-config.c: lstione to the new gconf key, and when caret mode 
	flag is set/unset,change the style of gtkhtml widget. see bug
	#44607.

2003-07-09  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-crypto.h: Removed camel-pgp-mime.h, it no longer exists.

	* mail-format.c: Remove camel-pgp-mime.h

2003-07-07  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-callbacks.c (mail_generate_reply): Use
	camel_strcase_hash/equal.

	* upgrade-mailer.c: Updated to use the camel-file-utils version of
	mkdir.

2003-07-02  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-tools.c (mail_tool_forward_message): Strip the signature
	from the body text. Fixes bug #45523. While we're here, also fix
	the code to quote exactly the same way as the
	mail_tool_quote_message() function.
	(mail_tool_quote_message): The last arg should not be